// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.hwsec;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/hwsec";

service WebauthnService {
  // New logs into a Chrome session as a fake user. Close must be called later
  // to clean up the associated resources.
  rpc New (NewRequest) returns (google.protobuf.Empty) {}

  // Close releases the resources obtained by New.
  rpc Close (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc SetupPin (SetupPinRequest) returns (google.protobuf.Empty) {}

  rpc StartWebauthn (StartWebauthnRequest) returns (google.protobuf.Empty) {}

  rpc EndWebauthn (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc StartMakeCredential (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc CheckMakeCredential (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc StartGetAssertion (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc CheckGetAssertion (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc EnterPin (EnterPinRequest) returns (google.protobuf.Empty) {}
}

enum BrowserType {
  ASH = 0;
  LACROS = 1;
}

enum UserVerification {
  DISCOURAGED = 0;
  PREFERRED = 1;
  REQUIRED = 2;
}

enum AuthenticatorType {
  UNSPECIFIED = 0;
  PLATFORM = 1;
  CROSS_PLATFORM = 2;
}

message NewRequest {
  BrowserType browser_type = 1;
  string lacros_deployed_path = 2;
}

message SetupPinRequest {
  string pin = 1;
}

message EnterPinRequest {
  string pin = 1;
}

message StartWebauthnRequest {
  UserVerification user_verification = 2;
  AuthenticatorType authenticator_type = 3;
  bool has_dialog = 4;
}
